--- a/src/Pages/LandingPage/LandingPage.scss
+++ b/src/Pages/LandingPage/LandingPage.scss
@@ -9,9 +9,15 @@
   .profile {
     position: fixed;
     display: flex;
-    align-items: center;
+    flex-direction: column;
     top: 10px;
     right: 10px;
+    background: white;
+    z-index: 2;
+    &-details{
+      display: flex;
+      align-items: center;
+    }
     .circle {
       width: 60px;
       height: 60px;
@@ -21,6 +27,7 @@
   }
 
   .currencies{
+    margin-top: 6vh;
       height: 60vh;
       width: 100%;
       display: flex;
