--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,5 @@
-@import 'bootstrap/dist/css/bootstrap.css';
-@import './assets/theme/colors.scss';
+@import "bootstrap/dist/css/bootstrap.css";
+@import "./assets/theme/colors.scss";
 body {
   margin: 0;
   // font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -15,6 +15,12 @@ code {
     monospace;
 }
 
-p{
+p {
   margin: 0;
+}
+.error-text {
+  color: red;
+  font-size: 0.7em;
+  font-weight: normal;
+  text-align: center;
 }
