--- a/src/components/CurrencyCard/CurrencyCard.scss
+++ b/src/components/CurrencyCard/CurrencyCard.scss
@@ -1,9 +1,13 @@
-@keyframes shine { 
+@keyframes shine {
   0% {
-      transform:translateX(-10%) translateY(-10%) rotate(30deg);
+    transform: translateX(-10%) translateY(-10%) rotate(30deg);
   }
-  80% {transform:translateX(-100%) translateY(-100%) rotate(30deg);}
-	100% {transform:translateX(100%) translateY(100%) rotate(30deg);}
+  80% {
+    transform: translateX(-100%) translateY(-100%) rotate(30deg);
+  }
+  100% {
+    transform: translateX(100%) translateY(100%) rotate(30deg);
+  }
 }
 .currency-card {
   position: relative;
@@ -18,47 +22,35 @@
   margin: 10px;
   overflow: hidden;
   transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-  
-  // background-color: #2d3436;
-  // background-image: linear-gradient(315deg, #2d3436 0%, #000000 74%);
-  // background : linear-gradient( to bottom, #c39738, #deb761, #c39738);
 
-  background-color: #000000;
-background-image: linear-gradient(315deg, #000000 0%, #7f8c8d 74%);
-
-background-color: #756213;
-background-image: linear-gradient(315deg, #756213 0%, #000000 74%);
-
-
-background-color: #1b2845;
-background-image: linear-gradient(315deg, #1b2845 0%, #274060 74%);
-
-background-color: #1b2845;
-background-image: linear-gradient(315deg, #1b2845 0%, #274060 74%);
-&:hover{
-  transform: scale(1.043);
-  &:after {
-    content:'';
-    top:0;
-    transform:translateX(100%) rotate(30deg);
-    width:200%;
-    height:200%;
-    position: absolute;
-    z-index:1;
-    animation: shine 1s infinite ease-in;
-    animation-iteration-count: 1;
-    animation-direction: alternate;
-    animation-delay: 100ms;
-    background:
-      linear-gradient( to right, 
-        rgba(255,255,255,0) 0%,
-        rgba(255, 255, 255, 0.3) 50%,
-        rgba(128,186,232,0) 99%,
-        rgba(128,186,232,0) 100%);
+  background-color: #1b2845;
+  background-image: linear-gradient(315deg, #1b2845 0%, #274060 74%);
+  @media (max-width: 450px) {
+    min-width: 90%;
   }
-}
-
-
+  &:hover {
+    transform: scale(1.043);
+    &:after {
+      content: "";
+      top: 0;
+      transform: translateX(100%) rotate(30deg);
+      width: 200%;
+      height: 200%;
+      position: absolute;
+      z-index: 1;
+      animation: shine 1s infinite ease-in;
+      animation-iteration-count: 1;
+      animation-direction: alternate;
+      animation-delay: 100ms;
+      background: linear-gradient(
+        to right,
+        rgba(255, 255, 255, 0) 0%,
+        rgba(255, 255, 255, 0.3) 50%,
+        rgba(128, 186, 232, 0) 99%,
+        rgba(128, 186, 232, 0) 100%
+      );
+    }
+  }
 
   .close-btn {
     position: absolute;
@@ -78,20 +70,21 @@ background-image: linear-gradient(315deg, #1b2845 0%, #274060 74%);
     top: 10px;
     left: 10px;
     &:after {
-      content:'';
-      top:0;
-      transform:translateX(100%) rotate(30deg);
-      width:300%;
-      height:300%;
+      content: "";
+      top: 0;
+      transform: translateX(100%) rotate(30deg);
+      width: 300%;
+      height: 300%;
       position: absolute;
-      z-index:1;
+      z-index: 1;
       animation: shine 3s infinite ease-in;
-      background:
-        linear-gradient( to right, 
-          rgba(255,255,255,0) 0%,
-          rgba(255,255,255,0.8) 50%,
-          rgba(128,186,232,0) 99%,
-          rgba(128,186,232,0) 100%);
+      background: linear-gradient(
+        to right,
+        rgba(255, 255, 255, 0) 0%,
+        rgba(255, 255, 255, 0.8) 50%,
+        rgba(128, 186, 232, 0) 99%,
+        rgba(128, 186, 232, 0) 100%
+      );
     }
     .line {
       width: 100%;
@@ -111,7 +104,6 @@ background-image: linear-gradient(315deg, #1b2845 0%, #274060 74%);
     display: flex;
     flex-direction: row;
     align-items: flex-end;
-    // color: #000000;
 
     p {
       margin: 0;
@@ -120,7 +112,6 @@ background-image: linear-gradient(315deg, #1b2845 0%, #274060 74%);
       margin-right: 20px;
     }
     .values {
-      
     }
   }
   .buttons {
