--- a/src/components/Dialogs/TransactionHistoryDialog/TransactionHistoryDialog.scss
+++ b/src/components/Dialogs/TransactionHistoryDialog/TransactionHistoryDialog.scss
@@ -1,32 +1,31 @@
 @import "../../../assets/theme/colors.scss";
-.transaction-history{
-    .transactions{
-        max-height: 40vh;
-        overflow-y: auto;
-        margin: 10px 30px;
-        .transaction{
-            margin: 10px 0;
-            padding: 5px 4px;
-            border-radius: 6px;
-            display: flex;
-            flex-direction: column;
-            &> :nth-child(2){
-                display: flex;
-                justify-content: space-between;
-            }
-          
-        }
-        &-deposit{
-          
-            background: rgba($secondary,  0.2);
-
-            &:first-child{}
-          
-
-        } 
-         &-exchange{
-            background: rgba($primary,  0.2);
-         
-        }
+.transaction-history {
+  .transactions {
+    max-height: 40vh;
+    overflow-y: auto;
+    // margin: 10px 30px;
+    .transaction {
+      margin: 10px 0;
+      padding: 8px 5px;
+      border-radius: 6px;
+      display: flex;
+      flex-direction: column;
+      & > :nth-child(2) {
+        display: flex;
+        justify-content: space-between;
+      }
+      @media (max-width: 550px) {
+        font-size: 0.8em;
+      }
     }
+    &-deposit {
+      background: rgba($secondary, 0.2);
+
+      &:first-child {
+      }
+    }
+    &-exchange {
+      background: rgba($primary, 0.2);
+    }
+  }
 }
