--- a/src/index.scss
+++ b/src/index.scss
@@ -2,9 +2,6 @@
 @import "./assets/theme/colors.scss";
 body {
   margin: 0;
-  // font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-  //   'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-  //   sans-serif;
   font-family: "Rubik", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -23,4 +20,14 @@ p {
   font-size: 0.7em;
   font-weight: normal;
   text-align: center;
+}
+
+.close-btn{
+  position: absolute;
+  top: 5px;
+  right: 5px;
+}
+
+.pointer{
+  cursor: pointer;
 }
